<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DisplayContact"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/editNr_Karty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="right"
                android:inputType="number"
                tools:layout_editor_absoluteX="-56dp"
                tools:layout_editor_absoluteY="441dp"></EditText>

            <EditText
                android:id="@+id/editPIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStreet"
                android:layout_alignRight="@+id/editTextStreet"
                android:layout_marginTop="42dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editPUK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStreet"
                android:layout_alignLeft="@+id/editTextStreet"
                android:layout_marginTop="82dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editNrTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStreet"
                android:layout_alignLeft="@+id/editTextStreet"
                android:layout_marginTop="122dp"
                android:ems="10"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/editmgpo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStreet"
                android:layout_alignLeft="@+id/editTextStreet"
                android:layout_alignParentRight="true"
                android:layout_marginTop="152dp"
                android:ems="10"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/editkonwoj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStreet"
                android:layout_alignParentRight="true"
                android:layout_alignLeft="@+id/editTextStreet"
                android:layout_marginTop="192dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/Nr_karty"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/Pin"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="82dp"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/Puk"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="122dp"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/NrTel"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="162dp"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/mgpo"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="202dp"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/konwoj"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:onClick="run"
                android:text="@string/save" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_below="@+id/button1"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>